# sample_cpp_project

./: CMakeLists.txt  Doxyfile  bench_mul.cpp  main.cpp  my_mul.hpp  test_mul.cpp
.github/workflows/: static.yaml  static.yml  test.yaml
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  my__mul_8cpp.html  my__mul_8hpp.html  my__mul_8hpp__dep__incl.dot  my__mul_8hpp_source.html
doc/html/search/: all_0.js  files_0.js  functions_0.js
include/: my_mul.hpp
src/: my_mul.cpp
